# noodlez

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
benches/: petgraph_baseline.rs
benchmarks/: Cargo.toml
benchmarks/benches/: petgraph_baseline.rs  slotmap_vs_indexmap.rs
nix/: bevy.nix
noodlez/: Cargo.toml
noodlez/src/: lib.rs
noodlez/src/storage/: edge.rs  graph.rs  node.rs  traits.rs
noodlez/src/storage/graph/: mod.rs  slotmap_graph.rs
spaghetti/: Cargo.toml
spaghetti/src/: appstate.rs  common_conditions.rs  external_graph.rs  main.rs  setup.rs
spaghetti/src/algorithms/: dfs.rs  mod.rs
spaghetti/src/bevy_graph/: dynamics.rs  edges.rs  interaction.rs  mod.rs  nodes.rs  rendering.rs
src/: error.rs  lib.rs
src/storage/: node.rs
