[workspace]
resolver = "2"
members = [
  "noodlez",
  "benchmarks"
, "spaghetti"]

[workspace.dependencies]
# the package
noodlez = { path = "./noodlez" }

# lib dependencies
slotmap = "1.0.7"

# bin dependencies
bevy = { version = "0.13.1", features = ["wayland"] }
bevy-inspector-egui = "0.23.4"

# benchmark dependencies
criterion = { version = "0.5.1", feature = ["html-reports"] }
indexmap = "2.2.5"
petgraph = "0.6.4"
