[package]
name = "spaghetti"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy.workspace = true
bevy-inspector-egui.workspace = true
bevy_mod_picking.workspace = true
bevy_prototype_lyon.workspace = true
noodlez.workspace = true
